force-app/main/default/objects/Ambassador_Event1__c/Ambassador_Event1__c.object-meta.xml
<CustomObject>
    <label>Ambassador Event1</label>
    <nameField>
        <label>Ambassador Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ambassador Events1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>