force-app/main/default/objects/Ambassador_Event1__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Co-Branding Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer Appreciation</fullName>
            </value>
            <value>
                <fullName>Product Launch and Promotion</fullName>
            </value>
            <value>
                <fullName>Seasonal Social Marketing Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>