force-app/main/default/objects/Ambassador_Event1__c/fields/Reach_Actual_Estimated__c.field-meta.xml
<CustomField>
    <fullName>Reach_Actual_Estimated__c</fullName>
    <label>Reach - Actual Estimated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>